Fix for control alignment

--- a/assets/less/plyr.less
+++ b/assets/less/plyr.less
@@ -148,6 +148,7 @@
 		padding: (@control-spacing * 2) @control-spacing @control-spacing;
 		background: @controls-bg;
 		line-height: 1;
+		text-align: center;
 
 		// Layout
 		&-sound {
